# chumbot

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
chumbot/: __init__.py  cli.py  client_interface.py
chumbot/backend/: chumshell.py  client.py  clips.py  constants.py
tests/: test_chumbot.py  test_client_interface.py
