[tool.poetry]
name = "chumbot"
version = "0.7.3"
description = "A chummy soundboard bot client for Mumble."
authors = ["Steven Anaya <anayastevenr@gmail.com>"]

readme = "README.md"
license = "Apache-2.0"

repository = "https://github.com/Boogie3D/chumbot"
homepage = "https://github.com/Boogie3D/chumbot"

keywords = [
	"mumble",
	"bot",
	"pymumble",
	"sound",
	"soundboard",
	"meme"
]

classifiers = [
	"Development Status :: 3 - Alpha",
	"Environment :: Console",
	"Intended Audience :: End Users/Desktop",
	"Intended Audience :: Other Audience",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Communications :: Chat"
]
[tool.poetry.dependencies]
python = "^3.7"
pymumble = "^1.6.1"

[tool.poetry.dev-dependencies]
pylama = "^7.7"
pylint = "^2.3"
pydocstyle = "^4.0"
pycodestyle = "^2.5"
pyflakes = "^2.1"

[tool.poetry.scripts]
chumbot = 'chumbot.cli:run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
